# OpenClassrooms_Project_10

./: .gitignore  README.md  db.json  db.sqlite3  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_age.py
api/: urls.py
contribution/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
contribution/migrations/: 0001_initial.py  0002_project_created_time_alter_contributor_project_and_more.py  0002_remove_comment_unique_comment.py  0003_rename_balise_issue_tag.py  0004_alter_comment_description.py
flake8-report/: index.html
softdesk_support/: asgi.py  settings.py  urls.py  wsgi.py
